--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <link rel="canonical" href="https://kasun-fernando.github.io/personal-webpage/" />
 <meta property="og:url" content="https://kasun-fernando.github.io/personal-webpage/" />
 <meta property="og:site_name" content="Kasun Fernando" />
-<meta property="og:image" content="https://kasun-fernando.github.io/personal-webpage/images/logo.png" />
+<meta property="og:image" content="https://kasun-fernando.github.io/personal-webpage/images/kasun.jpg" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta property="twitter:image" content="https://kasun-fernando.github.io/personal-webpage/images/logo.png" />
+<meta property="twitter:image" content="https://kasun-fernando.github.io/personal-webpage/images/kasun.jpg" />
 <meta property="twitter:title" content="Kasun Fernando" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"My personal website and blog","headline":"Kasun Fernando","image":"https://kasun-fernando.github.io/personal-webpage/images/logo.png","name":"Kasun Fernando","url":"https://kasun-fernando.github.io/personal-webpage/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"My personal website and blog","headline":"Kasun Fernando","image":"https://kasun-fernando.github.io/personal-webpage/images/kasun.jpg","name":"Kasun Fernando","url":"https://kasun-fernando.github.io/personal-webpage/"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/personal-webpage/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://kasun-fernando.github.io/personal-webpage/feed.xml" title="Kasun Fernando" /><link rel="shortcut icon" type="image/x-icon" href="/personal-webpage/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
