deploy: c26d4b6233f4396ab8d17d47fb2ec94ddd8651da

--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><h1 id="posts">Posts</h1>
 
-<p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>. 
-<img src="/personal-webpage/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
-
+<p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>.</p>
 
 
 
