--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/personal-webpage/about/">About Me</a><a class="page-link" href="/personal-webpage/search/">Search</a><a class="page-link" href="/personal-webpage/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/personal-webpage/about/">About Me</a><a class="page-link" href="/personal-webpage/search/">Search</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
