--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@ layout: home
 search_exclude: true
 image: images/kasun.jpg
 ---
+   <h4>Junior Visitor&nbsp;</h4>
+	  <p>Centro di Ricerca Matematica Ennio De Giorgi
+      <br> Scuola Normale Superiore 
+      <br> Piazza dei Cavalieri, 3 
+      <br> Pisa PI 56100, Italy
+	  </p>
+		<p>Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it</a></p>
+	
+	<h4>Past Employment</h4>
+	<p>Postdoctoral Fellow – University of Toronto
+    <br>(August 2018 - July 2021)</p>
+	
+	<h4>Education</h4>
+	<p>PhD in Mathematics – University of Maryland
+    <br>(August 2018)</p>
+	<p>BSc in Mathematics – University of Colombo
+    <br>(January 2014)</p>
 
-# Posts
+<br>
+<br>
+<br>  
 
 This site is built with [fastpages](https://github.com/fastai/fastpages). 
