--- a/index.html
+++ b/index.html
@@ -85,31 +85,31 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="images/kasun.jpg" alt="" /></p>
+        <div class="home"><figure style="float: right;">
+  <img class="image" width="300" src="/images/kasun.jpg" />
+  
+</figure>
 
 <h2 id="junior-visitor">Junior Visitor</h2>
-<p>Centro di Ricerca Matematica Ennio De Giorgi
-Scuola Normale Superiore 
-Piazza dei Cavalieri, 3 
-Pisa PI 56100, Italy</p>
+<h4 id="centro-di-ricerca-matematica-ennio-de-giorgi">Centro di Ricerca Matematica Ennio De Giorgi</h4>
+<h4 id="scuola-normale-superiore">Scuola Normale Superiore</h4>
+<h4 id="piazza-dei-cavalieri-3">Piazza dei Cavalieri, 3</h4>
+<h4 id="pisa-pi-56100-italy">Pisa PI 56100, Italy</h4>
 
 <p>Email: buddhima.akurugodage@sns.it</p>
 
 <h2 id="past-employment">Past Employment</h2>
 
-<h3 id="postdoctoral-fellow">Postdoctoral Fellow</h3>
-<p>University of Toronto
-(August 2018 - July 2021)</p>
+<h3 id="postdoctoral-fellow">Postdoctoral Fellow<br /></h3>
+<h4 id="university-of-toronto-august-2018---july-2021">University of Toronto (August 2018 - July 2021)</h4>
 
 <h2 id="education">Education</h2>
 
 <h3 id="phd-in-mathematics">PhD in Mathematics</h3>
-<p>University of Maryland
-(August 2018)</p>
+<h4 id="university-of-maryland-august-2018">University of Maryland (August 2018)</h4>
 
 <h3 id="bsc-in-mathematics">BSc in Mathematics</h3>
-<p>University of Colombo
-(January 2014)</p>
+<h4 id="university-of-colombo-january-2014">University of Colombo (January 2014)</h4>
 
 <p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>.</p>
 
