--- a/index.html
+++ b/index.html
@@ -2,28 +2,28 @@
 layout: home
 search_exclude: true
 ---
-{% include image-r w="300" url="kasun.jpg" %}
+![]({{ site.baseurl }}/images/kasun.jpg)
 
-## Junior Visitor
-#### Centro di Ricerca Matematica Ennio De Giorgi
-#### Scuola Normale Superiore 
-#### Piazza dei Cavalieri, 3 
-#### Pisa PI 56100, Italy
+#### Junior Visitor
+Centro di Ricerca Matematica Ennio De Giorgi      
+Scuola Normale Superiore         
+Piazza dei Cavalieri, 3           
+Pisa PI 56100, Italy      
 
-Email: buddhima.akurugodage@sns.it
+Email: buddhima.akurugodage@sns.it      
 
-## Past Employment
-
-### Postdoctoral Fellow<br>
-#### University of Toronto (August 2018 - July 2021)
+### Past Employment
+#### Postdoctoral Fellow     
+University of Toronto 
+(August 2018 - July 2021)
 	
-## Education
-
-### PhD in Mathematics
-#### University of Maryland (August 2018)
-
-### BSc in Mathematics
-#### University of Colombo (January 2014)
+### Education
+#### PhD in Mathematics     
+University of Maryland       
+(August 2018)
+#### BSc in Mathematics    
+University of Colombo    
+(January 2014)
 
 
 
