--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: home
 search_exclude: true
 ---
-![]({{ site.baseurl }}/images/kasun.jpg)
+<img align="right" src="images/kasun.png">
 
-#### Junior Visitor
+#### *Junior Visitor*
 Centro di Ricerca Matematica Ennio De Giorgi      
 Scuola Normale Superiore         
 Piazza dei Cavalieri, 3           
@@ -12,20 +12,18 @@ Pisa PI 56100, Italy
 
 Email: buddhima.akurugodage@sns.it      
 
-### Past Employment
-#### Postdoctoral Fellow     
-University of Toronto 
+#### **Past Employment**
+Postdoctoral Fellow - University of Toronto                
 (August 2018 - July 2021)
 	
-### Education
-#### PhD in Mathematics     
-University of Maryland       
-(August 2018)
-#### BSc in Mathematics    
-University of Colombo    
+#### **Education**
+PhD in Mathematics - University of Maryland                   
+(August 2018)      
+                    
+BSc in Mathematics - University of Colombo                                     
 (January 2014)
 
 
-
+---
 
 This site is built with [fastpages](https://github.com/fastai/fastpages). 
