--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ search_exclude: true
 ---
 <img align="right" src="images/kasun.png">
 
-#### *Junior Visitor*
+#### **Junior Visitor**
 Centro di Ricerca Matematica Ennio De Giorgi      
 Scuola Normale Superiore         
 Piazza dei Cavalieri, 3           
