--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="/personal-webpage/images/kasun.jpg" alt="" /></p>
+        <div class="home"><p><img align="right" src="images/kasun.png" /></p>
 
-<h4 id="junior-visitor">Junior Visitor</h4>
+<h4 id="junior-visitor"><em>Junior Visitor</em></h4>
 <p>Centro di Ricerca Matematica Ennio De Giorgi    <br />
 Scuola Normale Superiore       <br />
 Piazza dei Cavalieri, 3         <br />
@@ -95,18 +95,18 @@ Pisa PI 56100, Italy</p>
 
 <p>Email: buddhima.akurugodage@sns.it</p>
 
-<h3 id="past-employment">Past Employment</h3>
-<h4 id="postdoctoral-fellow">Postdoctoral Fellow</h4>
-<p>University of Toronto 
+<h4 id="past-employment"><strong>Past Employment</strong></h4>
+<p>Postdoctoral Fellow - University of Toronto              <br />
 (August 2018 - July 2021)</p>
 
-<h3 id="education">Education</h3>
-<h4 id="phd-in-mathematics">PhD in Mathematics</h4>
-<p>University of Maryland     <br />
+<h4 id="education"><strong>Education</strong></h4>
+<p>PhD in Mathematics - University of Maryland                 <br />
 (August 2018)</p>
-<h4 id="bsc-in-mathematics">BSc in Mathematics</h4>
-<p>University of Colombo  <br />
+
+<p>BSc in Mathematics - University of Colombo                                   <br />
 (January 2014)</p>
+
+<hr />
 
 <p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>.</p>
 
