deploy: 6ee836951bfd6bd0818e11554ecbf1c3735a9f71

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><p><img align="right" src="images/kasun.png" /></p>
 
-<h4 id="junior-visitor"><em>Junior Visitor</em></h4>
+<h4 id="junior-visitor"><strong>Junior Visitor</strong></h4>
 <p>Centro di Ricerca Matematica Ennio De Giorgi    <br />
 Scuola Normale Superiore       <br />
 Piazza dei Cavalieri, 3         <br />
