--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Scuola Normale Superiore
 Piazza dei Cavalieri, 3           
 Pisa PI 56100, Italy      
 
-Email: buddhima.akurugodage@sns.it      
+Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it</a>     
 
 #### **Past Employment**
 Postdoctoral Fellow - University of Toronto                
