deploy: 5081e637e06ffc0d1333049b988451c57c33ea95

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Scuola Normale Superiore       <br />
 Piazza dei Cavalieri, 3         <br />
 Pisa PI 56100, Italy</p>
 
-<p>Email: buddhima.akurugodage@sns.it</p>
+<p>Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it</a></p>
 
 <h4 id="past-employment"><strong>Past Employment</strong></h4>
 <p>Postdoctoral Fellow - University of Toronto              <br />
