deploy: 329326bdb5d2ad90cfa1a5bfa950f8ffe79be908

--- a/Research/index.html
+++ b/Research/index.html
@@ -93,8 +93,8 @@ window.onload = wrap_img;
     <p>Broadly speaking, the prime focus of my research is the interplay between probability theory, dynamical systems and statistics. I investigate</p>
 <ul>
   <li>statistical properties of dynamical systems and Markov processes,</li>
-  <li>inferential statistics in the context of dynamical systems</li>
-  <li>higher order asymptotics for limit theorems 
+  <li>inferential statistics in the context of dynamical systems, and</li>
+  <li>higher order asymptotics for limit theorems                                    <br />
 using spectral theory and a combination of techniques from classical probability theory, stochastic analysis, statistics and dynamical systems. Recently, I have started looking at</li>
   <li>applications of machine learning to solve related problems.</li>
 </ul>
