--- a/Research/index.html
+++ b/Research/index.html
@@ -94,8 +94,11 @@ window.onload = wrap_img;
 <ul>
   <li>statistical properties of dynamical systems and Markov processes,</li>
   <li>inferential statistics in the context of dynamical systems, and</li>
-  <li>higher order asymptotics for limit theorems                                    <br />
-using spectral theory and a combination of techniques from classical probability theory, stochastic analysis, statistics and dynamical systems. Recently, I have started looking at</li>
+  <li>higher order asymptotics for limit theorems</li>
+</ul>
+
+<p>using spectral theory and a combination of techniques from classical probability theory, stochastic analysis, statistics and dynamical systems. Recently, I have started looking at</p>
+<ul>
   <li>applications of machine learning to solve related problems.</li>
 </ul>
 
