deploy: cb9e3bed55fcf38f67e95513cbd3ddfd7c8d3368

--- a/Research/index.html
+++ b/Research/index.html
@@ -112,9 +112,29 @@ window.onload = wrap_img;
 
 <p>As the next few steps, we have some questions in mind. Is it possible to describe the error in the CLT when we pick a particular discrete random variable instead of describing the typical error? In particular, how do the Diophantine properties of the support of the discrete random variable affect this error? Also, in the absence of uniform error estimates, can we describe the error in weaker norms?</p>
 
+<p>Collaborators: <a href="https://www.math.umd.edu/~dolgop/">Dmitry Dolgopyat</a>.</p>
+
 <ol>
-  <li></li>
+  <li>Error terms in the local and the central limit theorem for weakly dependent random variables (Dynamical Systems and Stochastic Processes)</li>
 </ol>
+
+<p>In practice, sequences of experimental observations are never iid! So, we introduced a general theory of Edgeworth expansions for weakly dependent (possibly unbounded) random variables. As a direct application of this theory, we obtain error estimates of the CLTs for a large class of hyperbolic dynamical systems and Markov chains. The hyperbolic systems that we discuss like Sinai billiards and piecewise expanding maps are natural models in many applications – billiard models in optics, acoustics and classical mechanics, and expanding maps in random number generators, biological and medical models to name a few.</p>
+
+<p>There are many interesting problems in this direction. There are interesting examples of non-Gaussian stable laws in dynamical systems. Is it possible to describe the error terms in other stable laws? Earlier, we were able to obtain exact limit theorems for random matrix products. Drawing parallels with random matrix products, can we obtain similar statistical properties for deterministic cocycles with sufficient decorrelation in the base dynamics?</p>
+
+<p>Collaborators: <a href="https://www.mat.uniroma2.it/~liverani/">Carlangelo Liverani</a>, <a href="http://lmba.math.univ-brest.fr/perso/francoise.pene/">Françoise Pène</a></p>
+
+<ol>
+  <li>Inferential statistics for dynamically generated data (Statistics and Dynamical Systems)</li>
+</ol>
+
+<p>Parameter estimation problems in dynamical systems arise naturally in many areas, including machine learning, physics, econometrics, and engineering. Moreover, one should be able to apply tools from statistics to limited dynamically generated data and obtain meaningful inferences. Therefore, it is imperative that we investigate inferential statistics in the context of dynamical systems. However, since dynamically generated data are not iid, it is not straightforward to show the accuracy of statistical techniques. So, there must be rigorous justifications for tools like maximal likelihood methods and the Bootstrap when used in such contexts.</p>
+
+<p>We introduced A generic bootstrap methods for dynamical systems. Under some general conditions, using a novel continuous Edgeworth expansions, we establish not only the consistency but also the higher-order accuracy the bootstrap. We also study the empirical performance of the bootstrap methods using computer simulations.</p>
+
+<p>This area of research is widely open. For the pivoted bootstrap algorithm to work, either we should know the asymptotic variance or we should be able to readily estimate it. As far as we know, there is no theoretically-justified estimator for the asymptotic variance in a dynamical context. To solve this problem, can we find a good estimator for asymptotic variance? If so, what is the theoretical and empirical behavior of the pivoted bootstrap method based on this estimator?</p>
+
+<p>Collaborators:  <a href="https://sites.google.com/site/nzoupersonal/home">Nan Zou</a>.&lt;p&gt;&lt;/p&gt;</p>
 
 
   </div>
