deploy: a78360947db947605cf5093d0ed2029dfbbe5446

--- a/Research/index.html
+++ b/Research/index.html
@@ -105,10 +105,8 @@ window.onload = wrap_img;
 <p>Below, I have listed some of my research interests, the motivation behind them and the collaborators I work with. If you find the problems interesting and would like to discuss, don’t hesitate to write to me.</p>
 
 <ol>
-  <li>Extension of the classical theory of Edgeworth expansions to non-lattice discrete random variables (Classical Probability Theory)</li>
+  <li>Extension of the classical theory of Edgeworth expansions to non-lattice discrete random variables (Classical Probability Theory)      In applications, the dynamically generated data available to us are always finite-time observations. Hence, one key problem is to control the error of approximation of asymptotic behaviour. When the observations are independent identically distributed (iid), a uniform asymptotic expansion called the Edgeworth Expansion is used to describe the error of normal approximation in the Central Limit Theorem (CLT). The classical theory about these expansions is far from complete and does not discuss discrete random variables. As the first step, we extended the existing theory to include typical discrete random variables.</li>
 </ol>
-
-<p>In applications, the dynamically generated data available to us are always finite-time observations. Hence, one key problem is to control the error of approximation of asymptotic behaviour. When the observations are independent identically distributed (iid), a uniform asymptotic expansion called the Edgeworth Expansion is used to describe the error of normal approximation in the Central Limit Theorem (CLT). The classical theory about these expansions is far from complete and does not discuss discrete random variables. As the first step, we extended the existing theory to include typical discrete random variables.</p>
 
 <p>As the next few steps, we have some questions in mind. Is it possible to describe the error in the CLT when we pick a particular discrete random variable instead of describing the typical error? In particular, how do the Diophantine properties of the support of the discrete random variable affect this error? Also, in the absence of uniform error estimates, can we describe the error in weaker norms?</p>
 
@@ -134,7 +132,7 @@ window.onload = wrap_img;
 
 <p>This area of research is widely open. For the pivoted bootstrap algorithm to work, either we should know the asymptotic variance or we should be able to readily estimate it. As far as we know, there is no theoretically-justified estimator for the asymptotic variance in a dynamical context. To solve this problem, can we find a good estimator for asymptotic variance? If so, what is the theoretical and empirical behavior of the pivoted bootstrap method based on this estimator?</p>
 
-<p>Collaborators:  <a href="https://sites.google.com/site/nzoupersonal/home">Nan Zou</a>.&lt;p&gt;&lt;/p&gt;</p>
+<p>Collaborators:  <a href="https://sites.google.com/site/nzoupersonal/home">Nan Zou</a>.</p>
 
 
   </div>
