--- a/Research/index.html
+++ b/Research/index.html
@@ -102,19 +102,17 @@ window.onload = wrap_img;
   <li>applications of machine learning to solve related problems.</li>
 </ul>
 
-<p>Below, I have listed some of my research interests, the motivation behind them and the collaborators I work with. If you find the problems interesting and would like to discuss, don’t hesitate to write to me.</p>
+<p>Below, I discuss some of my research interests, the motivation behind them and the collaborators I work with. If you find the problems interesting and would like to discuss, don’t hesitate to write to me.</p>
 
-<ol>
-  <li>Extension of the classical theory of Edgeworth expansions to non-lattice discrete random variables (Classical Probability Theory)      In applications, the dynamically generated data available to us are always finite-time observations. Hence, one key problem is to control the error of approximation of asymptotic behaviour. When the observations are independent identically distributed (iid), a uniform asymptotic expansion called the Edgeworth Expansion is used to describe the error of normal approximation in the Central Limit Theorem (CLT). The classical theory about these expansions is far from complete and does not discuss discrete random variables. As the first step, we extended the existing theory to include typical discrete random variables.</li>
-</ol>
+<h4 id="extension-of-the-classical-theory-of-edgeworth-expansions-to-non-lattice-discrete-random-variables-classical-probability-theory">Extension of the classical theory of Edgeworth expansions to non-lattice discrete random variables (Classical Probability Theory)</h4>
+
+<p>In applications, the dynamically generated data available to us are always finite-time observations. Hence, one key problem is to control the error of approximation of asymptotic behaviour. When the observations are independent identically distributed (iid), a uniform asymptotic expansion called the Edgeworth Expansion is used to describe the error of normal approximation in the Central Limit Theorem (CLT). The classical theory about these expansions is far from complete and does not discuss discrete random variables. As the first step, we extended the existing theory to include typical discrete random variables.</p>
 
 <p>As the next few steps, we have some questions in mind. Is it possible to describe the error in the CLT when we pick a particular discrete random variable instead of describing the typical error? In particular, how do the Diophantine properties of the support of the discrete random variable affect this error? Also, in the absence of uniform error estimates, can we describe the error in weaker norms?</p>
 
 <p>Collaborators: <a href="https://www.math.umd.edu/~dolgop/">Dmitry Dolgopyat</a>.</p>
 
-<ol>
-  <li>Error terms in the local and the central limit theorem for weakly dependent random variables (Dynamical Systems and Stochastic Processes)</li>
-</ol>
+<h4 id="error-terms-in-the-local-and-the-central-limit-theorem-for-weakly-dependent-random-variables-dynamical-systems-and-stochastic-processes">Error terms in the local and the central limit theorem for weakly dependent random variables (Dynamical Systems and Stochastic Processes)</h4>
 
 <p>In practice, sequences of experimental observations are never iid! So, we introduced a general theory of Edgeworth expansions for weakly dependent (possibly unbounded) random variables. As a direct application of this theory, we obtain error estimates of the CLTs for a large class of hyperbolic dynamical systems and Markov chains. The hyperbolic systems that we discuss like Sinai billiards and piecewise expanding maps are natural models in many applications – billiard models in optics, acoustics and classical mechanics, and expanding maps in random number generators, biological and medical models to name a few.</p>
 
@@ -122,9 +120,7 @@ window.onload = wrap_img;
 
 <p>Collaborators: <a href="https://www.mat.uniroma2.it/~liverani/">Carlangelo Liverani</a>, <a href="http://lmba.math.univ-brest.fr/perso/francoise.pene/">Françoise Pène</a></p>
 
-<ol>
-  <li>Inferential statistics for dynamically generated data (Statistics and Dynamical Systems)</li>
-</ol>
+<h4 id="inferential-statistics-for-dynamically-generated-data-statistics-and-dynamical-systems">Inferential statistics for dynamically generated data (Statistics and Dynamical Systems)</h4>
 
 <p>Parameter estimation problems in dynamical systems arise naturally in many areas, including machine learning, physics, econometrics, and engineering. Moreover, one should be able to apply tools from statistics to limited dynamically generated data and obtain meaningful inferences. Therefore, it is imperative that we investigate inferential statistics in the context of dynamical systems. However, since dynamically generated data are not iid, it is not straightforward to show the accuracy of statistical techniques. So, there must be rigorous justifications for tools like maximal likelihood methods and the Bootstrap when used in such contexts.</p>
 
