--- a/Research/index.html
+++ b/Research/index.html
@@ -111,7 +111,7 @@ window.onload = wrap_img;
 
 <p>As the next few steps, we have some questions in mind. Is it possible to describe the error in the CLT when we pick a particular discrete random variable instead of describing the typical error? In particular, how do the Diophantine properties of the support of the discrete random variable affect this error? Also, in the absence of uniform error estimates, can we describe the error in weaker norms?</p>
 
-<p>Collaborators: <a href="https://www.math.umd.edu/~dolgop/">Dmitry Dolgopyat</a>.</p>
+<p>Collaborators: <a href="https://www.math.umd.edu/~dolgop/" target="_blank">Dmitry Dolgopyat</a>.</p>
 
 <h4 id="error-terms-in-the-local-and-the-central-limit-theorem-for-weakly-dependent-random-variables">Error terms in the local and the central limit theorem for weakly dependent random variables</h4>
 <p>(Dynamical Systems and Stochastic Processes)</p>
@@ -120,7 +120,7 @@ window.onload = wrap_img;
 
 <p>There are many interesting problems in this direction. There are interesting examples of non-Gaussian stable laws in dynamical systems. Is it possible to describe the error terms in other stable laws? Earlier, we were able to obtain exact limit theorems for random matrix products. Drawing parallels with random matrix products, can we obtain similar statistical properties for deterministic cocycles with sufficient decorrelation in the base dynamics?</p>
 
-<p>Collaborators: <a href="https://www.mat.uniroma2.it/~liverani/">Carlangelo Liverani</a>, <a href="http://lmba.math.univ-brest.fr/perso/francoise.pene/">Françoise Pène</a></p>
+<p>Collaborators: <a href="https://www.mat.uniroma2.it/~liverani/" target="_blank">Carlangelo Liverani</a>, <a href="http://lmba.math.univ-brest.fr/perso/francoise.pene/" target="_blank">Françoise Pène</a></p>
 
 <h4 id="inferential-statistics-for-dynamically-generated-data">Inferential statistics for dynamically generated data</h4>
 <p>(Statistics and Dynamical Systems)</p>
@@ -131,7 +131,7 @@ window.onload = wrap_img;
 
 <p>This area of research is widely open. For the pivoted bootstrap algorithm to work, either we should know the asymptotic variance or we should be able to readily estimate it. As far as we know, there is no theoretically-justified estimator for the asymptotic variance in a dynamical context. To solve this problem, can we find a good estimator for asymptotic variance? If so, what is the theoretical and empirical behavior of the pivoted bootstrap method based on this estimator?</p>
 
-<p>Collaborators:  <a href="https://sites.google.com/site/nzoupersonal/home">Nan Zou</a>.</p>
+<p>Collaborators:  <a href="https://sites.google.com/site/nzoupersonal/home" target="_blank">Nan Zou</a>.</p>
 
 <h4 id="density-estimation-via-robust-normalizing-flows">Density estimation via robust normalizing flows</h4>
 <p>(Machine Learning and Probability)</p>
@@ -140,7 +140,7 @@ window.onload = wrap_img;
 
 <p>We introduced a triangular NFs on euclidean spaces using Bernstein polynomials as coupling functions. Our NF model is robust under perturbations, ideal for compactly supported densities and can approximate any density even the ones that are multimodal and have sharp jumps. There are many real-world applications in nonlinear geometries (circular, spherical, etc.); for instance, applications in robotics and molecular modeling. Can we formulate robust normalizing flows in such non-linear geometries?</p>
 
-<p>Collaborators:  <a href="https://scholar.google.com/citations?user=-j0m9aMAAAAJ&amp;hl=en">Sameera Ramasinghe</a>.</p>
+<p>Collaborators:  <a href="https://scholar.google.com/citations?user=-j0m9aMAAAAJ&amp;hl=en" target="_blank">Sameera Ramasinghe</a>.</p>
 
 <h4 id="error-terms-in-the-large-deviations-for-weakly-dependent-random-variables">Error terms in the large deviations for weakly dependent random variables</h4>
 <p>(Dynamical Systems and Stochastic Processes)</p>
@@ -149,7 +149,7 @@ window.onload = wrap_img;
 
 <p>The first term of the large deviation asymptotics of the density of a branching process is obtained in a work of Hebbar, Koralov and Nolan. Is it possible to derive higher order expansions for densities of Markov processes? Moreover, our results do not apply to lattice valued processes but techniques for lattice-valued case in our previous work extend to this setting naturally. So, is it possible to obtain similar results in the lattice-valued case?</p>
 
-<p>Collaborators: <a href="https://sites.google.com/view/pratimahebbar">Pratima Hebbar</a>.</p>
+<p>Collaborators: <a href="https://sites.google.com/view/pratimahebbar" target="_blank">Pratima Hebbar</a>.</p>
 
 <h4 id="statistical-properties-of-mostly-expanding-fast-slow-partially-hyperbolic-systems">Statistical properties of mostly expanding fast-slow partially hyperbolic systems</h4>
 <p>(Smooth Ergodic Theory)</p>
@@ -158,7 +158,7 @@ window.onload = wrap_img;
 
 <p>There are some interesting questions related that require further exploration. What statistical properties are retained if the fast-slow partially hyperbolic systems considered there have mostly expanding centre directions? In particular, what conditions guarantee the existence of SRB measures and do they have exponential decay of correlations?</p>
 
-<p>Collaborators: <a href="http://www.math.toronto.edu/jacopods/">Jacopo de Simoi</a>.&lt;p&gt;&lt;/p&gt;&lt;/li&gt;</p>
+<p>Collaborators: <a href="http://www.math.toronto.edu/jacopods/" target="_blank">Jacopo De Simoi</a>.&lt;p&gt;&lt;/p&gt;&lt;/li&gt;</p>
 
   </div>
 
