--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 search_exclude: true
 ---
-<img align="right" src="images/kasun.png">
+<img align="right" src="images/kasun.jpg">
 
 #### **Junior Visitor**
 Centro di Ricerca Matematica Ennio De Giorgi      
