deploy: b843fbb101795b6875414162fae4d0699e6a5100

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img align="right" src="images/kasun.png" /></p>
+        <div class="home"><p><img align="right" src="images/kasun.jpg" /></p>
 
 <h4 id="junior-visitor"><strong>Junior Visitor</strong></h4>
 <p>Centro di Ricerca Matematica Ennio De Giorgi    <br />
