deploy: 2f32e8e9702ca7a0b8852cda8655d63cee06a78b

--- a/index.html
+++ b/index.html
@@ -83,29 +83,33 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img align="right" src="images/kasun.jpg" /></p>
-
-<h4 id="junior-visitor"><strong>Junior Visitor</strong></h4>
+        <div class="home"><h4 id="junior-visitor"><strong>Junior Visitor</strong></h4>
 <p>Centro di Ricerca Matematica Ennio De Giorgi    <br />
-Scuola Normale Superiore       <br />
+Scuola Normale Superiore       <img align="right" src="images/kasun.jpg" /><br />
 Piazza dei Cavalieri, 3         <br />
 Pisa PI 56100, Italy</p>
 
 <p>Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it</a></p>
 
 <h4 id="past-employment"><strong>Past Employment</strong></h4>
-<p>Postdoctoral Fellow - University of Toronto              <br />
-(August 2018 - July 2021)</p>
+<ul>
+  <li>Postdoctoral Fellow - University of Toronto              <br />
+(August 2018 - July 2021)</li>
+</ul>
 
 <h4 id="education"><strong>Education</strong></h4>
-<p>PhD in Mathematics - University of Maryland                 <br />
+<ul>
+  <li>
+    <p>PhD in Mathematics - University of Maryland                 <br />
 (August 2018)</p>
-
-<p>BSc in Mathematics - University of Colombo                                   <br />
+  </li>
+  <li>
+    <p>BSc in Mathematics - University of Colombo                                   <br />
 (January 2014)</p>
+  </li>
+</ul>
 
 <hr />
-
 <p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>.</p>
 
 
