--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ search_exclude: true
 
 
 #### **Junior Visitor**
-Centro di Ricerca Matematica Ennio De Giorgi      
-Scuola Normale Superiore       <img align="right" src="images/kasun.jpg">  
+Centro di Ricerca Matematica Ennio De Giorgi      <img align="right" src="images/kasun.jpg"> 
+Scuola Normale Superiore        
 Piazza dei Cavalieri, 3           
 Pisa PI 56100, Italy      
 
