deploy: 14d0f6dbbd4f092a8917e8ffea29060b131bf9b9

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ window.onload = wrap_img;
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home"><h4 id="junior-visitor"><strong>Junior Visitor</strong></h4>
-<p>Centro di Ricerca Matematica Ennio De Giorgi    <br />
-Scuola Normale Superiore       <img align="right" src="images/kasun.jpg" /><br />
+<p>Centro di Ricerca Matematica Ennio De Giorgi      <img align="right" src="images/kasun.jpg" /> 
+Scuola Normale Superiore      <br />
 Piazza dei Cavalieri, 3         <br />
 Pisa PI 56100, Italy</p>
 
