--- a/Research/index.html
+++ b/Research/index.html
@@ -98,6 +98,7 @@ window.onload = wrap_img;
 <p>Below, I discuss some of my research interests, the motivation behind them and the collaborators I work with. If you find the problems interesting and would like to discuss, don’t hesitate to write to me.</p>
 
 <h4 id="extension-of-the-classical-theory-of-edgeworth-expansions-to-non-lattice-discrete-random-variables">Extension of the classical theory of Edgeworth expansions to non-lattice discrete random variables</h4>
+<hr />
 <p>(Classical Probability Theory)</p>
 
 <p>In applications, the dynamically generated data available to us are always finite-time observations. Hence, one key problem is to control the error of approximation of asymptotic behaviour. When the observations are independent identically distributed (iid), a uniform asymptotic expansion called the Edgeworth Expansion is used to describe the error of normal approximation in the Central Limit Theorem (CLT). The classical theory about these expansions is far from complete and does not discuss discrete random variables. As the first step, we extended the existing theory to include typical discrete random variables.</p>
@@ -107,6 +108,7 @@ window.onload = wrap_img;
 <p>Collaborators: <a href="https://www.math.umd.edu/~dolgop/">Dmitry Dolgopyat</a>.</p>
 
 <h4 id="error-terms-in-the-local-and-the-central-limit-theorem-for-weakly-dependent-random-variables">Error terms in the local and the central limit theorem for weakly dependent random variables</h4>
+<hr />
 <p>(Dynamical Systems and Stochastic Processes)</p>
 
 <p>In practice, sequences of experimental observations are never iid! So, we introduced a general theory of Edgeworth expansions for weakly dependent (possibly unbounded) random variables. As a direct application of this theory, we obtain error estimates of the CLTs for a large class of hyperbolic dynamical systems and Markov chains. The hyperbolic systems that we discuss like Sinai billiards and piecewise expanding maps are natural models in many applications – billiard models in optics, acoustics and classical mechanics, and expanding maps in random number generators, biological and medical models to name a few.</p>
@@ -116,6 +118,7 @@ window.onload = wrap_img;
 <p>Collaborators: <a href="https://www.mat.uniroma2.it/~liverani/">Carlangelo Liverani</a>, <a href="http://lmba.math.univ-brest.fr/perso/francoise.pene/">Françoise Pène</a>.</p>
 
 <h4 id="inferential-statistics-for-dynamically-generated-data">Inferential statistics for dynamically generated data</h4>
+<hr />
 <p>(Statistics and Dynamical Systems)</p>
 
 <p>Parameter estimation problems in dynamical systems arise naturally in many areas, including machine learning, physics, econometrics, and engineering. Moreover, one should be able to apply tools from statistics to limited dynamically generated data and obtain meaningful inferences. Therefore, it is imperative that we investigate inferential statistics in the context of dynamical systems. However, since dynamically generated data are not iid, it is not straightforward to show the accuracy of statistical techniques. So, there must be rigorous justifications for tools like maximal likelihood methods and the Bootstrap when used in such contexts.</p>
@@ -127,7 +130,8 @@ window.onload = wrap_img;
 <p>Collaborators: <a href="https://sites.google.com/site/nzoupersonal/home">Nan Zou</a>.</p>
 
 <h4 id="density-estimation-via-robust-normalizing-flows">Density estimation via robust normalizing flows</h4>
-<p>(Machine Learning and Probability)</p>
+<hr />
+<p>(Machine Learning, Statistics and Probability)</p>
 
 <p>In the recent years, with the proliferation of machine learning research, modeling and prediction of real-world phenomena have progressed to the next level. There are numerous problems connected to statistics, probability theory, and dynamical systems that can be solved using machine learning. The problem of modeling an unknown probability distribution using sample data is one such example. A Normalizing flow (NF) in machine learning is a supervised learning procedure that determines the probability distribution of sample data by performing a maximum likelihood optimization.</p>
 
@@ -136,6 +140,7 @@ window.onload = wrap_img;
 <p>Collaborators: <a href="https://scholar.google.com/citations?user=-j0m9aMAAAAJ&amp;hl=en">Sameera Ramasinghe</a>.</p>
 
 <h4 id="error-terms-in-the-large-deviations-for-weakly-dependent-random-variables">Error terms in the large deviations for weakly dependent random variables</h4>
+<hr />
 <p>(Dynamical Systems and Stochastic Processes)</p>
 
 <p>For parabolic PDEs (with non-degeneracy assumptions) the fundamental solution is the transition density of the related diffusion process. Therefore, studying the long-term behaviour of fundamental solutions is the same as studying asymptotics of Markov probability densities. For a reasonable analysis, one must obtain LDPs which describe the solution at linear distances from the effective drift. A finer analysis is possible if higher order asymptotics is available. We introduced the required asymptotic expansions for probability distribution functions.</p>
@@ -145,6 +150,7 @@ window.onload = wrap_img;
 <p>Collaborators: <a href="https://sites.google.com/view/pratimahebbar">Pratima Hebbar</a>.</p>
 
 <h4 id="statistical-properties-of-mostly-expanding-fast-slow-partially-hyperbolic-systems">Statistical properties of mostly expanding fast-slow partially hyperbolic systems</h4>
+<hr />
 <p>(Smooth Ergodic Theory)</p>
 
 <p>When systems are partially hyperbolic, as demonstrated in the series of recent influential work of De Simoi, Liverani and coauthors, the study of statistical properties becomes challenging. They demonstrate metastable behaviour in a deterministic setting for the first time by considering an open class of fast-slow partially hyperbolic systems with mostly contracting centre directions. They also study the existence of SRB measures, their rate of decay of correlations, LLTs and LDPs.</p>
