--- a/Research/index.html
+++ b/Research/index.html
@@ -97,16 +97,23 @@ window.onload = wrap_img;
 
 <p>Below, I discuss some of my research interests, the motivation behind them and the collaborators I work with. If you find the problems interesting and would like to discuss, don’t hesitate to write to me.</p>
 
-<h4 id="extension-of-the-classical-theory-of-edgeworth-expansions-to-non-lattice-discrete-random-variables">Extension of the classical theory of Edgeworth expansions to non-lattice discrete random variables</h4>
-<hr />
-<p>(Classical Probability Theory)</p>
+<details>
+<summary> 
+----
+#### Extension of the classical theory of Edgeworth expansions to non-lattice discrete random variables  
+---
+</summary>    
 
-<p>In applications, the dynamically generated data available to us are always finite-time observations. Hence, one key problem is to control the error of approximation of asymptotic behaviour. When the observations are independent identically distributed (iid), a uniform asymptotic expansion called the Edgeworth Expansion is used to describe the error of normal approximation in the Central Limit Theorem (CLT). The classical theory about these expansions is far from complete and does not discuss discrete random variables. As the first step, we extended the existing theory to include typical discrete random variables.</p>
+(Classical Probability Theory)                   
 
-<p>As the next few steps, we have some questions in mind. Is it possible to describe the error in the CLT when we pick a particular discrete random variable instead of describing the typical error? In particular, how do the Diophantine properties of the support of the discrete random variable affect this error? Also, in the absence of uniform error estimates, can we describe the error in weaker norms?</p>
+In applications, the dynamically generated data available to us are always finite-time observations. Hence, one key problem is to control the error of approximation of asymptotic behaviour. When the observations are independent identically distributed (iid), a uniform asymptotic expansion called the Edgeworth Expansion is used to describe the error of normal approximation in the Central Limit Theorem (CLT). The classical theory about these expansions is far from complete and does not discuss discrete random variables. As the first step, we extended the existing theory to include typical discrete random variables.                             
+
+As the next few steps, we have some questions in mind. Is it possible to describe the error in the CLT when we pick a particular discrete random variable instead of describing the typical error? In particular, how do the Diophantine properties of the support of the discrete random variable affect this error? Also, in the absence of uniform error estimates, can we describe the error in weaker norms?    
+</details>
 
 <p>Collaborators: <a href="https://www.math.umd.edu/~dolgop/">Dmitry Dolgopyat</a>.</p>
 
+<hr />
 <h4 id="error-terms-in-the-local-and-the-central-limit-theorem-for-weakly-dependent-random-variables">Error terms in the local and the central limit theorem for weakly dependent random variables</h4>
 <hr />
 <p>(Dynamical Systems and Stochastic Processes)</p>
@@ -117,18 +124,19 @@ window.onload = wrap_img;
 
 <p>Collaborators: <a href="https://www.mat.uniroma2.it/~liverani/">Carlangelo Liverani</a>, <a href="http://lmba.math.univ-brest.fr/perso/francoise.pene/">Françoise Pène</a>.</p>
 
+<hr />
 <h4 id="inferential-statistics-for-dynamically-generated-data">Inferential statistics for dynamically generated data</h4>
 <hr />
 <p>(Statistics and Dynamical Systems)</p>
 
-<p>Parameter estimation problems in dynamical systems arise naturally in many areas, including machine learning, physics, econometrics, and engineering. Moreover, one should be able to apply tools from statistics to limited dynamically generated data and obtain meaningful inferences. Therefore, it is imperative that we investigate inferential statistics in the context of dynamical systems. However, since dynamically generated data are not iid, it is not straightforward to show the accuracy of statistical techniques. So, there must be rigorous justifications for tools like maximal likelihood methods and the Bootstrap when used in such contexts.</p>
-
-<p>We introduced A generic bootstrap methods for dynamical systems. Under some general conditions, using a novel continuous Edgeworth expansions, we establish not only the consistency but also the higher-order accuracy the bootstrap. We also study the empirical performance of the bootstrap methods using computer simulations.</p>
+<p>Parameter estimation problems in dynamical systems arise naturally in many areas, including machine learning, physics, econometrics, and engineering. Moreover, one should be able to apply tools from statistics to limited dynamically generated data and obtain meaningful inferences. Therefore, it is imperative that we investigate inferential statistics in the context of dynamical systems. However, since dynamically generated data are not iid, it is not straightforward to show the accuracy of statistical techniques. So, there must be rigorous justifications for tools like maximal likelihood methods and the Bootstrap when used in such contexts.                             <br />
+We introduced A generic bootstrap methods for dynamical systems. Under some general conditions, using a novel continuous Edgeworth expansions, we establish not only the consistency but also the higher-order accuracy the bootstrap. We also study the empirical performance of the bootstrap methods using computer simulations.</p>
 
 <p>This area of research is widely open. For the pivoted bootstrap algorithm to work, either we should know the asymptotic variance or we should be able to readily estimate it. As far as we know, there is no theoretically-justified estimator for the asymptotic variance in a dynamical context. To solve this problem, can we find a good estimator for asymptotic variance? If so, what is the theoretical and empirical behavior of the pivoted bootstrap method based on this estimator?</p>
 
 <p>Collaborators: <a href="https://sites.google.com/site/nzoupersonal/home">Nan Zou</a>.</p>
 
+<hr />
 <h4 id="density-estimation-via-robust-normalizing-flows">Density estimation via robust normalizing flows</h4>
 <hr />
 <p>(Machine Learning, Statistics and Probability)</p>
@@ -139,6 +147,7 @@ window.onload = wrap_img;
 
 <p>Collaborators: <a href="https://scholar.google.com/citations?user=-j0m9aMAAAAJ&amp;hl=en">Sameera Ramasinghe</a>.</p>
 
+<hr />
 <h4 id="error-terms-in-the-large-deviations-for-weakly-dependent-random-variables">Error terms in the large deviations for weakly dependent random variables</h4>
 <hr />
 <p>(Dynamical Systems and Stochastic Processes)</p>
@@ -149,6 +158,7 @@ window.onload = wrap_img;
 
 <p>Collaborators: <a href="https://sites.google.com/view/pratimahebbar">Pratima Hebbar</a>.</p>
 
+<hr />
 <h4 id="statistical-properties-of-mostly-expanding-fast-slow-partially-hyperbolic-systems">Statistical properties of mostly expanding fast-slow partially hyperbolic systems</h4>
 <hr />
 <p>(Smooth Ergodic Theory)</p>
