deploy: 011d22025e4b8e205b40cb789b1924416a63bcd7

--- a/Research/index.html
+++ b/Research/index.html
@@ -99,8 +99,7 @@ window.onload = wrap_img;
 
 <details>
 <summary> 
-#### Extension of the classical theory of Edgeworth expansions to non-lattice discrete random variables  
----
+Extension of the classical theory of Edgeworth expansions to non-lattice discrete random variables  
 </summary>    
 
 (Classical Probability Theory)<br />                          
@@ -109,10 +108,9 @@ In applications, the dynamically generated data available to us are always finit
 <br /> 
 As the next few steps, we have some questions in mind. Is it possible to describe the error in the CLT when we pick a particular discrete random variable instead of describing the typical error? In particular, how do the Diophantine properties of the support of the discrete random variable affect this error? Also, in the absence of uniform error estimates, can we describe the error in weaker norms?    
 </details>
-
+<hr />
 <p>Collaborators: <a href="https://www.math.umd.edu/~dolgop/">Dmitry Dolgopyat</a>.</p>
 
-<hr />
 <h4 id="error-terms-in-the-local-and-the-central-limit-theorem-for-weakly-dependent-random-variables">Error terms in the local and the central limit theorem for weakly dependent random variables</h4>
 <hr />
 <p>(Dynamical Systems and Stochastic Processes)</p>
