deploy: 19ef106e34e3967ac57359b8866bfc027befc4a3

--- a/Outreach/index.html
+++ b/Outreach/index.html
@@ -83,7 +83,29 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        
+        <ul>
+  <li><strong>Youtube</strong></li>
+</ul>
+
+<p>In this day and age, Social media can be used for outreach activities in an extremely effective way. Since I am passionate about popularizing higher mathematics and improving mathematics education in Sri Lanka, I welcomed the opportunities to collaborate with two Sri Lankan YouTube content creators Fadil Iqbal of <a href="https://www.youtube.com/c/IQLabs">IQ Labs</a> and Ashan Ariyawansa of <a href="https://www.youtube.com/c/NCAstronomy/">NC Astronomy</a>. The collaboration with Fadil is on-going and we plan to have casual discussions about many more advanced math topics in the future.</p>
+
+<table>
+  <tbody>
+    <tr>
+      <td>youtube: [අතාත්වික සංඛ්‍යා වල ඉතිහාසය</td>
+      <td>The History of Complex Numbers](https://www.youtube.com/watch?v=GBrp8-JGOQw)</td>
+    </tr>
+  </tbody>
+</table>
+
+<table>
+  <tbody>
+    <tr>
+      <td>youtube: [විද්‍යාඥයෙක් වෙන්නෙ කොහොමද?</td>
+      <td>How to Become a Scientist?](https://www.youtube.com/watch?v=tCJ-_bU4BS0)</td>
+    </tr>
+  </tbody>
+</table>
 
       </div>
     </main><footer class="site-footer h-card">
