--- a/Outreach/index.html
+++ b/Outreach/index.html
@@ -83,13 +83,14 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <ul>
-  <li><strong>Youtube</strong></li>
-</ul>
+        <h3 id="youtube">Youtube</h3>
 
 <p>In this day and age, Social media can be used for outreach activities in an extremely effective way. Since I am passionate about popularizing higher mathematics and improving mathematics education in Sri Lanka, I welcomed the opportunities to collaborate with two Sri Lankan YouTube content creators Fadil Iqbal of <a href="https://www.youtube.com/c/IQLabs">IQ Labs</a> and Ashan Ariyawansa of <a href="https://www.youtube.com/c/NCAstronomy/">NC Astronomy</a>. The collaboration with Fadil is on-going and we plan to have casual discussions about many more advanced math topics in the future.</p>
 
 <p>youtube: <a href="https://www.youtube.com/watch?v=GBrp8-JGOQw">අතාත්වික සංඛ්‍යා වල ඉතිහාසය - The History of Complex Numbers</a></p>
+
+<iframe width="640" height="480" src="https://www.youtube.com/watch?v=GBrp8-JGOQw" frameborder="0" allow="encrypted-media" allowfullscreen="">
+</iframe>
 
 <p>youtube: <a href="https://www.youtube.com/watch?v=tCJ-_bU4BS0">විද්‍යාඥයෙක් වෙන්නෙ කොහොමද? - How to Become a Scientist?</a></p>
 
